# AceTheGame

./: .Dockerfile.swp  .dockerignore  .gitignore  .gitmodules  .runner.sh.swp  ACE_release.py  DEV_GUIDE.md  Dockerfile  Jenkinsfile  Modder_release.py  README.md  ROADMAP.md  build.sh  build_option.py  changelog.md  contributing.md  docker_build.py  docker_run_shell.py  installation_guide.md  make_release.py  run.sh  run_shell.sh  runner.sh  set_env.sh  showcase.md  tutorial.md  util.py
.github/workflows/: main.yml
ACE/: .gitignore  CMakeLists.txt  ChangeLog.md  LICENSE  LICENSE_APPLIED  TODO.md  format.py  log.txt  pseudo_code_temp  readme.md  roadmap.md
ACE/client/: CMakeLists.txt  README.md  status_subscriber.cpp
ACE/cmake_utils/: CMakeLists.txt
ACE/docs/: gui_backend_protocol.md  readme.md
ACE/docs/engine/: building.md  running.md  testing.md
ACE/docs/gui/: building.md  running.md  testing.md
ACE/engine/: CMakeLists.txt  format.py  format.sh  intro.txt
ACE/engine/client/: ACE_attach_client.cpp  ACE_util_client.cpp  CMakeLists.txt  README.md  attach_client.cpp  client.cpp  util_client.cpp
ACE/engine/cmake_utils/: CMakeLists.txt
ACE/engine/example_program/: ACE_mock.cpp  CMakeLists.txt  rev_endian.cpp
ACE/engine/include/ACE/: ACE_global.hpp  ace_type.hpp  attach_client.hpp  cheat_cmd_handler.hpp  cheat_session.hpp  common.hpp  engine_client.hpp  engine_module.hpp  engine_server.hpp  error.hpp  file_utils.hpp  license.hpp  main_cmd_creator.hpp  main_cmd_handler.hpp  maps.hpp  proc_stat.hpp  scan_utils.hpp  scanner.hpp  status_publisher.hpp  str_utils.hpp  thread_continuous.hpp  to_frontend.hpp
ACE/engine/mock_program/: CMakeLists.txt  README.md  main.cpp  run_mock.cpp
ACE/engine/program_utils/: CMakeLists.txt  address_check.cpp  freeze_val.cpp  readme.md  scan_and_write_self.cpp
ACE/engine/src/: ACE_global.cpp  ACE_global.hpp  ACE_jni.cpp  ACE_jni.hpp  ace_type.cpp  ace_type.hpp  aslr_edit.cpp  aslr_edit.hpp  attach_client.cpp  cheat.cpp  cheat.hpp  cheat_cmd_handler.cpp  cheat_cmd_handler.hpp  cheat_session.cpp  cheat_session.hpp  endian.cpp  engine_client.cpp  engine_client.hpp  engine_module.cpp  engine_module.hpp  engine_server.cpp  engine_server.hpp  error.cpp  file_utils.cpp  freeze.cpp  input.cpp  loaded_mem_info.cpp  loaded_mem_info.hpp  logcrash.txt  main.cpp  main_cmd_creator.cpp  main_cmd_handler.cpp  main_cmd_handler.hpp  maps.cpp  maps.hpp  match_store.cpp  match_store.hpp  math_util.cpp  math_util.hpp  proc_create.cpp  (+18 more)
ACE/engine/test/: CMakeLists.txt  aslr_edit.cpp  common.cpp  endian.cpp  engine_module.cpp  engine_server_client.cpp  file_utils.cpp  freeze.cpp  maps.cpp  match_store.cpp  math_util.cpp  mock_program_controller.hpp  proc_rw.cpp  proc_stat.cpp  scan_utils.cpp  scanner.cpp  scanner2.cpp  scanner_tester.hpp  simulated_memory.cpp  str_utils.cpp  test_main.cpp  test_mock_program_controller.cpp  thread_continuous.cpp  to_frontend.cpp
ACE/engine/test/test_files/maps_files/: android_app_maps  android_map2  maps2
ACE/engine/test/test_files/read_file_test/: readme.md
ACE/example_program/: fake.c  main.c  readme.md  rev_endian.cpp
ACE/gui/: README.md  copy_python.cmake  requirements.txt  setup.py
ACE/gui/ACEG/: ace_gui.py  main_menu.py  main_menu.ui  readme.md
ACE/gui/ACEG/config/: engine_build_path.py
ACE/gui/ACEG/dialog/: device_android.py  proc_list.py
ACE/gui/ACEG/engine_build/: .gitignore  make_release.py
ACE/gui/ACEG/engine_comm/: engine.py  proc_comm.py  protocol.py
ACE/gui/ACEG/test/: main.py  readme.md
ACE/gui/ACEG/utils/: command.py  extended_enum.py  str_utils.py
ACE/gui/ACEG/widget/: log_msg.py  process_table.py
ACE/include/ACE/: ACE_global.hpp  ace_type.hpp  cheat_cmd_handler.hpp  common.hpp  endian.hpp  engine_server.hpp  freeze.hpp  input.hpp  main_cmd_handler.hpp  match_store.hpp  proc_create.hpp  proc_rw.hpp  proc_stat.hpp  ptrace.hpp  scan_utils.hpp  scanner.hpp  server.hpp  status_publisher.hpp  vector_util.hpp
ACE/mock_program/: CMakeLists.txt
ACE/program_utils/: address_check.cpp
ACE/py_scripts/: gen_rand.py
ACE/src/: ACE_global.cpp  ACE_jni.cpp  aslr_edit.cpp  cheat.cpp  cheat_cmd_handler.cpp  cheat_session.cpp  common.cpp  credits.txt  endian.cpp  engine_module.cpp  engine_server.cpp  error.cpp  file_utils.cpp  freeze.cpp  input.cpp  intro.txt  proc_create.cpp  proc_stat.cpp  ptrace.cpp  scan_utils.cpp  scanner.cpp  str_utils.cpp  to_frontend.cpp
ACE/test/: CMakeLists.txt  aslr_edit.cpp  common.cpp  endian.cpp  engine_module.cpp  file_utils.cpp  freeze.cpp  math_util.cpp  mock_program_controller.hpp  proc_rw.cpp  proc_stat.cpp  readme.md  scanner.cpp  slow-compiles.md  str_utils.cpp  test_mock_program_controller.cpp  thread_continuous.cpp  to_frontend.cpp  vector_util.cpp
ACE/test/test_files/: readme.md
ACE/test/test_files/maps_files/: android_maps_crash  android_smaps  android_smaps_size  android_smaps_size_total.py  maps
ATG/: build.gradle  changelog.md  gradle.properties  readme.md  settings.gradle
ATG/app/: build.gradle
ATG/gradle/wrapper/: gradle-wrapper.properties
ApkTool/: .build.gradle.swp  build.gradle
Modder/: README.md  TODO.md  settings.gradle
Modder/app/: .gitignore  build.gradle
Modder/injector/: Plan.md  README.md  gen_smali.py
Modder/injector/src/: build_docker.sh  run_shell.sh
Modder/modder/: .gitignore  build.gradle
billing-hack/: .project  README.md  build.gradle  settings.gradle
billing-hack/app/: .project  build.gradle
billing-hack/gradle/wrapper/: gradle-wrapper.properties
docs/: script.js
injector/: .gitignore  README.md  TODO.md  gen_smali.py  gen_smali.sh  notes.md
injector/apk_source/hello-libs/: .project
injector/manifest_example/: AndroidManifest.xml
injector/smali/: AndroidManifest.xml  apktool.yml  resources.arsc
injector/src/: Dockerfile  run_server.py
server/: Main.java  app.py
tutorial/: README.md  full_doc.md  guides.md  quick_start.md
tutorial/ACE/: scanning_basic.md
tutorial/ACE/fly_hack/: readme.md
tutorial/ACE/infinite_coin/: readme.md
web/: index.html
(+3738 files in other folders)
